--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "scripts": {
     "pbiviz": "pbiviz",
     "start": "pbiviz start",
-    "package": "pbiviz package",
-    "lint": "npx eslint ."
+    "package": "pbiviz package --certification-audit",
+    "lint": "npx eslint .",
+    "eslint": "npx eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "d3": "^7.9.0",
     "powerbi-models": "^2.0.1",
-    "powerbi-visuals-api": "~5.3.0",
+    "powerbi-visuals-api": "~5.10.0",
     "powerbi-visuals-utils-dataviewutils": "^6.1.0",
     "powerbi-visuals-utils-formattingmodel": "^6.2.2",
     "powerbi-visuals-utils-tooltiputils": "^6.0.4"
